[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/pause_menu.gd" id="1"]

[node name="PauseMenu" type="Control"]
script = ExtResource(1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="."]
anchors_preset = 3
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -180.0
margin_right = 220.0
margin_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
text = "Resume"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
text = "Quit"

[node name="MasterSlider" type="HSlider" parent="Panel/VBoxContainer"]
min_value = 0.0
max_value = 1.0
value = 0.8

[node name="MusicSlider" type="HSlider" parent="Panel/VBoxContainer"]
min_value = 0.0
max_value = 1.0
value = 0.6

[node name="SFXSlider" type="HSlider" parent="Panel/VBoxContainer"]
min_value = 0.0
max_value = 1.0
value = 0.7

[node name="ColorblindOption" type="OptionButton" parent="Panel/VBoxContainer"]

[node name="SaveSlot1" type="Button" parent="Panel/VBoxContainer"]
text = "Save Slot 1"

[node name="SaveSlot2" type="Button" parent="Panel/VBoxContainer"]
text = "Save Slot 2"

[node name="SaveSlot3" type="Button" parent="Panel/VBoxContainer"]
text = "Save Slot 3"

[node name="LoadSlot1" type="Button" parent="Panel/VBoxContainer"]
text = "Load Slot 1"

[node name="LoadSlot2" type="Button" parent="Panel/VBoxContainer"]
text = "Load Slot 2"

[node name="LoadSlot3" type="Button" parent="Panel/VBoxContainer"]
text = "Load Slot 3"

[node name="StatusLabel" type="Label" parent="Panel/VBoxContainer"]
text = ""
